--- a/student-evaluation/views/home.ejs
+++ b/student-evaluation/views/home.ejs
@@ -60,9 +60,9 @@
 				<li><a href="#">Home</a></li>
 				<li><a href="/StartEvaluation">StartEvaluation</a></li>
 				<li><a href="#">PreviousEvaluation</a></li>
-				<li><a href="#">About</a></li>
-				<button><a href="/login">SignIn</a></button>
-				<button><a href="/register">SignUp</a></button>
+				<li><a href="/about">About</a></li>
+				<button><a href="/login">Login</a></button>
+				<button><a href="/register">Register</a></button>
 			</ul>
 		</div>
 	</nav>
