--- a/student-evaluation/views/register.ejs
+++ b/student-evaluation/views/register.ejs
@@ -106,6 +106,10 @@
         </div>
 
         <div class="input-group">
+            <input type="text" placeholder="Roll Number" name="RollNumber" required>
+        </div>
+
+        <div class="input-group">
             <input type="password" placeholder="Set Password" name="Password" required>
         </div>
 
@@ -121,3 +125,10 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
