--- a/student-evaluation/views/publicHome.ejs
+++ b/student-evaluation/views/publicHome.ejs
@@ -40,8 +40,7 @@
             /* background-color: rgba(0, 0, 0, 0.367); */
         }
 		li a{
-			background-color: black; margin-left: 10px; border-radius: 10px; padding: 10px; width: 90px;
-			color: white; font-weight: bold; font-size: 15px;
+			color: white; font-size: 18px;
             /* font-weight: bold;  */
             margin-right: 25px;
 		}
@@ -59,15 +58,11 @@
 			<div class="logo"><a href="#">Student Evaluation</a> </div>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="/StartEvaluation">Start</a></li>
-			   
+				<li><a href="/StartEvaluation">StartEvaluation</a></li>
+			
 				<li><a href="/about">About</a></li>
-
-				<li><a href="/about">Compare</a></li>
-
-                <button> <a href="/logout"> Logout </a></button>
-		
-
+				<button><a href="/login">Login</a></button>
+				<button><a href="/register">Register</a></button>
 			</ul>
 		</div>
 	</nav>
